@@ -16,6 +16,7 @@ features/changes:
    are ordered and grouped based on analysis interval
  * Added 3 new variables independent (SSTA_CAR and AREA_WHWP) and one variable 
    dependent (RUNOFF)
+ * Updated transform_data_stations script
 
 bugfixes:
  * bugfix the size data when set particular common period
@@ -23,6 +24,9 @@ bugfixes:
  * fix when Jaziku detect language from system 
  * fix crash and memory overflow when open many file
  * check different cases to run data daily/monthly and analisis interval defined
+ * fixed range interval for var I and different lags when data is daily and 
+   result is in 5, 10 or 15 days
+ 
 
 0.2.1
  * change name function and filename results of Arithmetic Mean Trim to mean_trim
